@@ -1,4 +1,8 @@
 ###### TWE 5.1-3 RELEASED ######
+2015-05-19 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode:
+   	- changed names of some constants
+
 2015-05-09 Sasa Bojanic <sasaboy@together.at>
    # Shark mode:
       - Supported new activity extended attribute "FORM_PAGE_URL
